@@ -1,14 +1,6 @@
 -*- mode: org -*-
 beancount: TODO
 * Ingest (LedgerHub)
-** Merging into Beancount
-
-  - Add a unit test to check that clobbering existing files is prevented.
-
-  - Two downloaded files with the same destination names clobber each other;
-    this is a BUG, mutate the name of the destination file.
-
-
 ** PDF Importer
 
   - Create an example of filing a PDF file using PDFminer2.
@@ -26,9 +18,9 @@ beancount: TODO
 
 ** Future Features
 
-   - In identify, mark as ambiguous if two handlers match.
+  - In identify, mark as ambiguous if two handlers match.
 
-   - Run directories check on each run of file? Disable with an option.
+  - Run directories check on each run of file? Disable with an option.
 
   - Make sure that when an exptest fails it includes the filename of the test
     somewhere in there; it's annoying when it's not present there.
